--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
                         </div>
                         <div class="space-y-2 md:w-4/6">
                             <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Commercial</h4>
-                            <p class="text-sm lg:text-base text-text_1 font-medium  ">Commercial interior designers plan public spaces—government buildings, private businesses, or other corporate entities.</p>
+                            <p class="text-sm lg:text-base text-text_1 font-medium  ">Commercial interior designers plan
+                                public spaces—government buildings, private businesses, or other corporate entities.</p>
                             <button class=" text-balack_2 font-extrabold  ">
                                 View Details
                                 <i
@@ -278,7 +279,8 @@
                         </div>
                         <div class="space-y-2 md:w-4/6">
                             <h4 class="text-base md:text-lg lg:text-xl text-text_1 font-extrabold ">Commercial</h4>
-                            <p class="text-sm lg:text-base text-text_1 font-medium  ">Offices are a common focus of these professionals, but they may also work with schools, banks, retail</p>
+                            <p class="text-sm lg:text-base text-text_1 font-medium  ">Offices are a common focus of
+                                these professionals, but they may also work with schools, banks, retail</p>
                             <button class=" text-balack_2 font-extrabold  ">
                                 View Details
                                 <i
@@ -306,14 +308,14 @@
                     problems, consult the FAQs on our website. Internet terminology. A question in a list of
                     questions and answers intended to help people.</p>
             </div>
-            <div class="flex flex-col-reverse md:flex-row md:justify-between md:items-center gap-5 my-12 p-5">
+            <div class="flex flex-col-reverse md:flex-row md:justify-between md:items-center gap-5 my-5 md:my-8 p-5">
                 <!-- Accordion start-->
                 <div class="md:w-7/12">
                     <div class="collapse collapse-plus rounded-xl p-2 mb-2 border-2 ">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Equipment</div>
                         <div class="collapse-content ">
-                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">This usually includes
+                            <p class="text-xs md:text-sm lg:text-base text-text_1 font-medium ">This usually includes
                                 a helmet, shoulder pads/chest protector, elbow pads, mouth guard, protective gloves,
                                 heavily
                                 padded shorts, a 'jock' athletic protector, shin pads and a neck guard.</p>
@@ -323,7 +325,7 @@
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Training</div>
                         <div class="collapse-content">
-                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">Should
+                            <p class="text-xs md:text-sm lg:text-base text-text_1 font-medium ">Should
                                 absolutely be using squat-based exercises in their workouts. This can & should include
                                 Goblet
                                 Squats</p>
@@ -333,7 +335,7 @@
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Private</div>
                         <div class="collapse-content">
-                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">With private ,
+                            <p class="text-xs md:text-sm lg:text-base text-text_1 font-medium ">With private ,
                                 you can definitely
                                 increase your skill level...but you also need to supplement it with real
                                 physical competition as well,</p>
@@ -343,7 +345,7 @@
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Touring</div>
                         <div class="collapse-content">
-                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">touring is skiing
+                            <p class="text-xs md:text-sm lg:text-base text-text_1 font-medium ">touring is skiing
                                 in the backcountry on unmarked or unpatrolled areas. Touring is typically done off-piste
                                 and
                                 outside of ski resorts</p>
@@ -353,7 +355,7 @@
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Booking </div>
                         <div class="collapse-content">
-                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">Will be
+                            <p class="text-xs md:text-sm lg:text-base text-text_1 font-medium ">Will be
                                 available online at Paytm Insider: www.insider.in. Please note, you will need to redeem
                                 your ticket
                                 confirmation for a physical ticket.</p>
@@ -363,7 +365,7 @@
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-base md:text-lg lg:text-xl font-bold">Pricing</div>
                         <div class="collapse-content">
-                            <p class="text-xs md:text-sm lg:text-base text-gray-400  font-medium ">Pricing is a process
+                            <p class="text-xs md:text-sm lg:text-base text-text_1 font-medium ">Pricing is a process
                                 of fixing the value that a manufacturer will receive in the exchange of services and
                                 goods.</p>
                         </div>
@@ -375,6 +377,53 @@
             </div>
         </div>
     </section>
+    <!-- FAQ Section End -->
+    <!-- Let’s Connect section start -->
+    <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat">
+        <div class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 my-10 md:my-15 lg:my-24 py-10 md:py-12 lg:py-15 ">
+            <!-- section title start-->
+            <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
+                <button class="text-sm lg:text-base text-text_1 bg-[#ABEF5F50] rounded-full px-4 py-2 font-bold "><i
+                        class="fa-solid fa-arrow-right-long me-2"></i>Let’s Connect</button>
+                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">Let’s Discuss Next Project</h2>
+                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-8/12 mx-auto">We wait to hear
+                    about your dream home project. Whether you're looking for a full-service remodel or a simple home
+                    refresh, we're here to help!</p>
+            </div>
+            <!-- section title end-->
+            <div class="col-span-1 lg:col-span-2">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+                    <div class=" ">
+                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="text"
+                            placeholder="First Name*">
+                    </div>
+                    <div class="">
+                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="text"
+                            placeholder="Last Name*">
+                    </div>
+                    <div class="">
+                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="tex"
+                            placeholder="Phone Number*">
+                    </div>
+                    <div class="">
+                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="email"
+                            placeholder="Email Number*">
+                    </div>
+                    <div class="md:col-span-2">
+                        <textarea class="text-[#A0A0A0] bg-white p-5 rounded-xl outline-none w-full" type="text"
+                            placeholder="Write your message here" rows="8" name="" id=""></textarea>
+                    </div>
+                    <div class="md:col-span-2">
+                        <button
+                            class="btn bg-primary text-[#1C1C1C] rounded-full w-full font-bold text-lg lg:text-xl">Send
+                            Mail <i
+                                class="fa-solid fa-arrow-right-long -rotate-45 bg-black_2 text-white p-2 rounded-full"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Let’s Connect section End -->
 
 
 
