--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     <!-- FAQ Section End -->
     <!-- Let’s Connect section start -->
     <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat">
-        <div class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 my-10 md:my-15 lg:my-24 py-10 md:py-12 lg:py-15 ">
+        <div class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 mt-10 md:mt-15 lg:mt-24 py-10 md:py-12 lg:py-15 ">
             <!-- section title start-->
             <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
                 <button class="text-sm lg:text-base text-text_1 bg-[#ABEF5F50] rounded-full px-4 py-2 font-bold "><i
@@ -394,28 +394,27 @@
             <div class="col-span-1 lg:col-span-2">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
                     <div class=" ">
-                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="text"
+                        <input class="text-[#A0A0A0] bg-white p-4 rounded-full outline-none w-full" type="text"
                             placeholder="First Name*">
                     </div>
                     <div class="">
-                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="text"
+                        <input class="text-[#A0A0A0] bg-white p-4 rounded-full outline-none w-full" type="text"
                             placeholder="Last Name*">
                     </div>
                     <div class="">
-                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="tex"
+                        <input class="text-[#A0A0A0] bg-white p-4 rounded-full outline-none w-full" type="tex"
                             placeholder="Phone Number*">
                     </div>
                     <div class="">
-                        <input class="text-[#A0A0A0] bg-white p-5 rounded-full outline-none w-full" type="email"
+                        <input class="text-[#A0A0A0] bg-white p-4 rounded-full outline-none w-full" type="email"
                             placeholder="Email Number*">
                     </div>
                     <div class="md:col-span-2">
-                        <textarea class="text-[#A0A0A0] bg-white p-5 rounded-xl outline-none w-full" type="text"
+                        <textarea class="text-[#A0A0A0] bg-white p-4 rounded-3xl outline-none w-full" type="text"
                             placeholder="Write your message here" rows="8" name="" id=""></textarea>
                     </div>
                     <div class="md:col-span-2">
-                        <button
-                            class="btn bg-primary text-[#1C1C1C] rounded-full w-full font-bold text-lg lg:text-xl">Send
+                        <button class="btn bg-primary text-[#1C1C1C] rounded-full w-full font-bold text-lg ">Send
                             Mail <i
                                 class="fa-solid fa-arrow-right-long -rotate-45 bg-black_2 text-white p-2 rounded-full"></i></button>
                     </div>
@@ -424,49 +423,32 @@
         </div>
     </section>
     <!-- Let’s Connect section End -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- footer section start -->
     <footer class="bg-black_2">
-        <section
-            class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20 mt-10 md:mt-15 lg:mt-24 py-10 md:py-12 lg:py-15 ">
+        <section class="container mx-auto px-3 sm:px-7 md:px-15 lg:px-20  py-10 md:py-12 lg:py-15 ">
             <!-- section title start-->
             <div class="space-y-2 md:space-y-4 py-4 md:py-6 lg:py-8 text-center ">
-                <button class="text-sm lg:text-base text-text_1 bg-white rounded-full px-4 py-2 font-bold "><i
-                        class="fa-solid fa-arrow-right-long me-2"></i>About Us</button>
-                <h2 class="text-xl md:text-2xl lg:text-4xl font-extrabold ">We design thoughtful, live able
-                    spaces</h2>
-                <p class="text-sm lg:text-base text- font-medium text-text_1 lg:w-8/12 mx-auto">We have over 25 years
+                <div class="flex items-center justify-center gap-2">
+                    <i class="fa-solid fa-arrow-right-long -rotate-45 bg-primary p-1 rounded-full"></i>
+                    <h4 class="text-[#E9E9E9] text-md sm:text-xl md:text-2xl lg:text-3xl font-extrabold">Rinterio</h4>
+                </div>
+                <p class="text=[#737373] text-sm lg:text-base text- font-medium text-text_1 lg:w-8/12 mx-auto">We have
+                    over 25 years
                     of experience in designing and installing all manner of interior projects from tiny terrace
                     seaside cottages to rolling country houses.</p>
             </div>
             <!-- section title end-->
-
+            <nav class="flex justify-center gap-7 flex-col md:flex-row text-center">
+                <a class="link link-hover text-[#E9E9E9] text-base font-medium">Home</a>
+                <a class="link link-hover text-[#E9E9E9] text-base font-medium">Services</a>
+                <a class="link link-hover text-[#E9E9E9] text-base font-medium">Portfolio</a>
+                <a class="link link-hover text-[#E9E9E9] text-base font-medium">Blogs</a>
+                <a class="link link-hover text-[#E9E9E9] text-base font-medium">Contact Us</a>
+            </nav>
+            <div class="flex justify-center">
+                <button class="btn bg-primary text-[#1C1C1C] rounded-full font-bold text-base  my-7">Book Consult<i
+                        class="fa-solid fa-arrow-right-long -rotate-45 bg-black_2 text-white p-2 rounded-full"></i></button>
+            </div>
         </section>
     </footer>
     <!-- footer section end -->
